[package]
name = "weblab-ndarray"
version = "0.1.0"
authors = ["Jan Kaul"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
adjacent-pair-iterator = "0.1.2"
web-sys = "0.3.37"
# rayon = "1.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[profile.release]
opt-level = 3
